--- a/insights/enterprise-finops-strategy.html
+++ b/insights/enterprise-finops-strategy.html
@@ -18,156 +18,149 @@
 </head>
 
 <body>
-  <a id="top" tabindex="-1"></a>
-  <a href="#main" class="skip-link">Skip to main content</a>
+<a id="top" tabindex="-1"></a>
+<a href="#main" class="skip-link">Skip to main content</a>
 
-  <!-- HEADER -->
-  <header class="site-header">
-    <div class="header-inner">
-      <a href="../index.html#top" class="brand home-link">
-        <img src="../assets/images/profile.webp" alt="Santhosh Kumar" class="brand-avatar" width="32" height="32" />
-        <span class="brand-text">SANTHOSH KUMAR</span>
-      </a>
-      <nav class="nav-links">
-        <a href="../index.html#about">About</a>
-        <a href="../index.html#expertise">Strategic Focus Areas</a>
-        <a href="../index.html#work">Strategic Initiatives Led</a>
-        <a href="../index.html#blog">Insights</a>
-        <a href="../index.html#contact">Contact</a>
-      </nav>
-      <div class="header-actions">
-        <button type="button" class="theme-btn" id="themeToggle">🌙</button>
-        <button type="button" class="menu-btn" id="menuToggle">≡</button>
-      </div>
+<!-- HEADER -->
+<header class="site-header" id="siteHeader">
+  <div class="header-inner">
+    <a href="../index.html#top" class="brand home-link">
+      <img src="../assets/images/profile.webp" alt="Santhosh Kumar" class="brand-avatar" width="32" height="32" />
+      <span class="brand-text">SANTHOSH KUMAR</span>
+    </a>
+    <nav class="nav-links">
+      <a href="../index.html#about">About</a>
+      <a href="../index.html#expertise">Strategic Focus Areas</a>
+      <a href="../index.html#work">Strategic Initiatives Led</a>
+      <a href="../index.html#blog">Insights</a>
+      <a href="../index.html#contact">Contact</a>
+    </nav>
+    <div class="header-actions">
+      <button type="button" class="theme-btn" id="themeToggle">🌙</button>
+      <button type="button" class="menu-btn" id="menuToggle">≡</button>
     </div>
-  </header>
-
-  <!-- MOBILE MENU -->
-  <div class="mobile-menu" id="mobileMenu" hidden>
-    <div class="mobile-menu-scrim" data-close="true"></div>
-    <aside class="mobile-panel" role="dialog" aria-modal="true">
-      <div class="mobile-top">
-        <div class="mobile-brand">
-          <img src="../assets/images/profile.webp" alt="Santhosh Kumar" class="brand-avatar" width="32" height="32" />
-          <div>
-            <div class="mobile-brand-name">SANTHOSH KUMAR</div>
-            <div class="mobile-title">Menu</div>
-          </div>
-        </div>
-        <button type="button" class="mobile-close" data-close="true">✕</button>
-      </div>
-      <nav class="mobile-nav">
-        <a href="../index.html#about">About</a>
-        <a href="../index.html#expertise">Strategic Focus Areas</a>
-        <a href="../index.html#work">Strategic Initiatives</a>
-        <a href="../index.html#blog">Insights</a>
-        <a href="../index.html#contact">Contact</a>
-      </nav>
-    </aside>
   </div>
+</header>
 
-  <!-- ARTICLE -->
-  <main id="main" class="container">
-    <article style="max-width:820px; margin:auto; padding:60px 20px;">
+<!-- MOBILE MENU -->
+<div class="mobile-menu" id="mobileMenu" hidden>
+  <div class="mobile-menu-scrim" data-close="true"></div>
+  <aside class="mobile-panel" role="dialog" aria-modal="true">
+    <div class="mobile-top">
+      <div class="mobile-brand">
+        <img src="../assets/images/profile.webp" alt="Santhosh Kumar" class="brand-avatar" width="32" height="32" />
+        <div>
+          <div class="mobile-brand-name">SANTHOSH KUMAR</div>
+          <div class="mobile-title">Menu</div>
+        </div>
+      </div>
+      <button type="button" class="mobile-close" data-close="true">✕</button>
+    </div>
+    <nav class="mobile-nav">
+      <a href="../index.html#about">About</a>
+      <a href="../index.html#expertise">Strategic Focus Areas</a>
+      <a href="../index.html#work">Strategic Initiatives</a>
+      <a href="../index.html#blog">Insights</a>
+      <a href="../index.html#contact">Contact</a>
+    </nav>
+  </aside>
+</div>
 
-      <p><a href="../index.html#blog">← Back to Insights</a></p>
+<!-- ARTICLE -->
+<main id="main" class="container" style="min-height:auto; overflow:visible;">
+  <article style="max-width:820px; margin:auto; padding:60px 20px;">
 
-      <h1>Enterprise Cloud FinOps Strategy</h1>
-      <p class="subtitle">Cloud Governance | Financial Management | Enterprise Strategy</p>
+    <p><a href="../index.html#blog">← Back to Insights</a></p>
 
-      <figure style="margin:40px 0; text-align:center;">
-        <img src="../assets/images/cloud-finops-strategy.png"
-             alt="Enterprise Cloud FinOps strategy diagram"
-             style="width:100%; border-radius:12px;"
-             loading="lazy" decoding="async">
-        <figcaption style="font-size:14px; opacity:0.7; margin-top:8px;">
-          Aligning cloud spend with business value through FinOps
-        </figcaption>
-      </figure>
+    <h1>Enterprise Cloud FinOps Strategy</h1>
+    <p class="subtitle">Cloud Governance | Financial Management | Enterprise Strategy</p>
 
-      <p>
-        As cloud adoption matures, organizations are shifting their focus from rapid migration to sustainable financial management. 
-        What begins as innovation enablement can quickly become cost sprawl if not governed effectively. This is where an enterprise 
-        Cloud FinOps strategy becomes essential — bridging the gap between technology, finance, and business leadership.
-      </p>
+    <figure style="margin:40px 0; text-align:center;">
+      <img src="../assets/images/cloud-finops-strategy.png"
+           alt="Enterprise Cloud FinOps strategy diagram"
+           style="width:100%; border-radius:12px;"
+           loading="lazy" decoding="async">
+      <figcaption style="font-size:14px; opacity:0.7; margin-top:8px;">
+        Aligning cloud spend with business value through FinOps
+      </figcaption>
+    </figure>
 
-      <h2>Why FinOps Matters at Enterprise Scale</h2>
-      <p>
-        Cloud introduces a consumption-based financial model that traditional IT budgeting practices were never designed to handle. 
-        Without visibility, accountability, and optimization mechanisms, costs grow unpredictably. A FinOps strategy ensures cloud 
-        spending aligns directly with measurable business outcomes.
-      </p>
+    <p>As cloud adoption matures, organizations are shifting their focus from rapid migration to sustainable financial management. What begins as innovation enablement can quickly become cost sprawl if not governed effectively. This is where an enterprise Cloud FinOps strategy becomes essential — bridging the gap between technology, finance, and business leadership.</p>
 
-      <blockquote style="border-left:4px solid #0ea5e9; padding-left:16px; margin:30px 0; font-style:italic;">
-        FinOps is not just cost control — it is value optimization.
-      </blockquote>
+    <h2>Why FinOps Matters at Enterprise Scale</h2>
+    <p>Cloud introduces a consumption-based financial model that traditional IT budgeting practices were never designed to handle. Without visibility, accountability, and optimization mechanisms, costs grow unpredictably. A FinOps strategy ensures cloud spending aligns directly with measurable business outcomes.</p>
 
-      <h2>Core Pillars of an Enterprise FinOps Strategy</h2>
+    <blockquote style="border-left:4px solid #0ea5e9; padding-left:16px; margin:30px 0; font-style:italic;">
+      FinOps is not just cost control — it is value optimization.
+    </blockquote>
 
-      <h3>1. Visibility and Transparency</h3>
-      <p>
-        Financial accountability starts with real-time visibility into cloud usage and cost drivers. Tagging strategies, cost allocation models, 
-        and shared dashboards allow business units to understand their consumption patterns.
-      </p>
+    <h2>Core Pillars of an Enterprise FinOps Strategy</h2>
 
-      <h3>2. Accountability and Ownership</h3>
-      <p>
-        Cloud spend must be owned by product teams, not just centralized IT or finance. Embedding cost metrics into engineering workflows 
-        creates a culture where teams design with efficiency in mind.
-      </p>
+    <h3>1. Visibility and Transparency</h3>
+    <p>Financial accountability starts with real-time visibility into cloud usage and cost drivers. Tagging strategies, cost allocation models, and shared dashboards allow business units to understand their consumption patterns.</p>
 
-      <h3>3. Optimization and Efficiency</h3>
-      <p>
-        Enterprises should continuously optimize through right-sizing, commitment-based discounts, storage lifecycle policies, and automated scaling. 
-        FinOps introduces data-driven decision-making to balance performance and cost.
-      </p>
+    <h3>2. Accountability and Ownership</h3>
+    <p>Cloud spend must be owned by product teams, not just centralized IT or finance. Embedding cost metrics into engineering workflows creates a culture where teams design with efficiency in mind.</p>
 
-      <h3>4. Governance and Guardrails</h3>
-      <p>
-        Policies, budgets, and automated controls prevent uncontrolled growth. Governance should guide innovation, not block it — enabling teams 
-        to experiment within safe financial boundaries.
-      </p>
+    <h3>3. Optimization and Efficiency</h3>
+    <p>Enterprises should continuously optimize through right-sizing, commitment-based discounts, storage lifecycle policies, and automated scaling. FinOps introduces data-driven decision-making to balance performance and cost.</p>
 
-      <h2>Operating Model for FinOps Success</h2>
-      <p>
-        Effective FinOps requires cross-functional collaboration. Finance, engineering, architecture, and leadership must operate as a unified 
-        decision-making ecosystem. Regular cost reviews, forecasting cycles, and KPI tracking ensure financial alignment with strategy.
-      </p>
+    <h3>4. Governance and Guardrails</h3>
+    <p>Policies, budgets, and automated controls prevent uncontrolled growth. Governance should guide innovation, not block it — enabling teams to experiment within safe financial boundaries.</p>
 
-      <ul>
-        <li>Establish a FinOps council across technology and finance</li>
-        <li>Adopt shared cost dashboards and reporting standards</li>
-        <li>Embed cost awareness into DevOps pipelines</li>
-        <li>Continuously refine governance policies as adoption evolves</li>
-      </ul>
+    <h2>Operating Model for FinOps Success</h2>
+    <p>Effective FinOps requires cross-functional collaboration. Finance, engineering, architecture, and leadership must operate as a unified decision-making ecosystem.</p>
 
-      <h2>Strategic Impact</h2>
-      <p>
-        When done right, FinOps transforms cloud from a cost center into a strategic growth platform. Organizations gain the agility to innovate 
-        while maintaining financial discipline — a balance that defines mature digital enterprises.
-      </p>
+    <ul>
+      <li>Establish a FinOps council across technology and finance</li>
+      <li>Adopt shared cost dashboards and reporting standards</li>
+      <li>Embed cost awareness into DevOps pipelines</li>
+      <li>Continuously refine governance policies as adoption evolves</li>
+    </ul>
 
-      <h2>Final Thoughts</h2>
-      <p>
-        Enterprise Cloud FinOps is a journey, not a one-time initiative. It evolves alongside cloud maturity, organizational structure, and 
-        business priorities. The goal is not just to spend less, but to spend smarter — ensuring every dollar invested in the cloud drives 
-        measurable business value.
-      </p>
+    <h2>Strategic Impact</h2>
+    <p>When done right, FinOps transforms cloud from a cost center into a strategic growth platform. Organizations gain the agility to innovate while maintaining financial discipline.</p>
 
-    </article>
+    <h2>Final Thoughts</h2>
+    <p>Enterprise Cloud FinOps is a journey, not a one-time initiative. The goal is not just to spend less, but to spend smarter — ensuring every dollar invested in the cloud drives measurable business value.</p>
 
-    <!-- FOOTER -->
-    <footer id="contact">
-      <hr style="margin:40px 0; opacity:0.2;">
-      <p style="text-align:center; font-weight:600;">SANTHOSH KUMAR CHANDRASHEKAR</p>
-      <p style="text-align:center; font-size:13px; opacity:0.7;">
-        Cloud & DevOps Portfolio Architect • Enterprise Technology Leader
-      </p>
-    </footer>
-  </main>
+    <hr style="margin:50px 0; opacity:0.2;">
+    <nav id="articleNav" style="display:flex; justify-content:space-between; gap:20px;"></nav>
 
-  <script src="../js/theme.js"></script>
-  <script src="../js/menu.js"></script>
-  <script src="../js/scroll.js"></script>
+  </article>
+
+  <footer>
+    <hr style="margin:40px 0; opacity:0.2;">
+    <p style="text-align:center; font-weight:600;">SANTHOSH KUMAR CHANDRASHEKAR</p>
+    <p style="text-align:center; font-size:13px; opacity:0.7;">
+      Cloud & DevOps Portfolio Architect • Enterprise Technology Leader
+    </p>
+  </footer>
+</main>
+
+<script>
+fetch('../data/articles.json')
+  .then(res => res.json())
+  .then(articles => {
+    const currentPath = window.location.pathname.split('/').pop();
+    const nav = document.getElementById('articleNav');
+    const index = articles.findIndex(a => a.url.endsWith(currentPath));
+    if (index > 0) {
+      const prev = articles[index - 1];
+      nav.innerHTML += `<a href="../${prev.url}">← <strong>${prev.title}</strong></a>`;
+    } else {
+      nav.innerHTML += `<span></span>`;
+    }
+    if (index < articles.length - 1) {
+      const next = articles[index + 1];
+      nav.innerHTML += `<a href="../${next.url}" style="text-align:right;"><strong>${next.title}</strong> →</a>`;
+    }
+  });
+</script>
+
+<script src="../js/theme.js"></script>
+<script src="../js/menu.js"></script>
+<script src="../js/scroll.js"></script>
+
 </body>
 </html>
