--- a/insights/enterprise-finops-strategy.html
+++ b/insights/enterprise-finops-strategy.html
@@ -69,7 +69,7 @@
 <!-- ARTICLE -->
 <main id="main" class="container" style="min-height:auto; overflow:visible;">
 
-    <p><a href="../index.html#blog">← Back to Insights</a></p>
+    <p><a href="../#blog">← Back to Insights</a></p>
 
     <h1>Enterprise Cloud FinOps Strategy</h1>
     <p class="subtitle">Cloud Governance | Financial Management | Enterprise Strategy</p>
