--- a/insights/enterprise-finops-strategy.html
+++ b/insights/enterprise-finops-strategy.html
@@ -67,7 +67,7 @@
 </div>
 
 <!-- ARTICLE -->
-<main id="main" class="container" style="min-height:auto; overflow:visible;">
+<main id="main" class="container" style="width:100%; overflow:visible;">
 
     <p><a href="../#blog">← Back to Insights</a></p>
 
